--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
   <!-- Brands -->
   <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css" />
 
+  <!-- wow js -->
+  <link rel="stylesheet" href="css/animate.css">
+
   <!-- Theme CSS file -->
   <link rel="stylesheet" href="css/style.css" />
 
@@ -39,21 +42,21 @@
 <body>
   <!-- Header Section Start -->
   <header>
-    <div class="container">
+    <div class="container wow">
       <div class="row">
         <!-- navbar start -->
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <!-- Header logo -->
-              <a class="navbar-brand" href="#"><img src="assets/logo.png" alt="Header logo" /></a>
+              <a class="navbar-brand wow fadeInLeft" href="#"><img src="assets/logo.png" alt="Header logo" /></a>
 
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <div class="collapse navbar-collapse wow fadeInRight" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -83,10 +86,10 @@
   <!-- Header Section End -->
 
   <!-- Banner Section Start -->
-  <section class="banner-section">
+  <section class="banner-section wow">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-6 wow fadeIn">
           <h1><span>DISCOVER </span>YOUR WORLD IN DIFFERENT WAYS.</h1>
           <p>Avaliable for android and IOS</p>
           <ul>
@@ -104,7 +107,7 @@
   <!-- Banner Section End -->
 
   <!-- Features Section Start -->
-  <section class="features">
+  <section class="features wow">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -113,27 +116,27 @@
           </div>
           <div class="features-items">
             <div class="row align-items-center">
-              <div class="col-lg col-sm col">
+              <div class="col-lg col-sm col wow fadeInLeft">
                 <a href="javascript:;"><i class="fi fi-sr-video-camera-alt"></i></a>
                 <p>Video Calls</p>
               </div>
 
-              <div class="col-lg col-sm col">
+              <div class="col-lg col-sm col wow fadeInLeft">
                 <a href="tel:01694850349"><i class="fi fi-sr-phone-call"></i></a>
                 <p>Voice Calls</p>
               </div>
 
-              <div class="col-lg col-sm col">
+              <div class="col-lg col-sm col wow fadeInDown">
                 <a href="mailto:rabby8933@gmail.com"><i class="fi fi-sr-comments"></i></a>
                 <p class="msg">Instant Messaging</p>
               </div>
 
-              <div class="col-lg col-sm col">
+              <div class="col-lg col-sm col wow fadeInRight">
                 <a href="javascript:;"><i class="fi fi-sr-cloud-share"></i></a>
                 <p>File Sharing</p>
               </div>
 
-              <div class="col-lg col-sm col">
+              <div class="col-lg col-sm col wow fadeInRight">
                 <a href="javascript:;"><i class="fi fi-sr-data-transfer"></i></a>
                 <p>Screen Sharing</p>
               </div>
@@ -149,22 +152,22 @@
   <!-- Features Section End -->
 
   <!-- Video-call Section Start -->
-  <section class="video-call-section">
+  <section class="video-call-section wow">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-7">
-          <div class="content">
+          <div class="content wow fadeInLeft">
             <h5><span>//</span>Video Calls</h5>
             <h2>Be conected with family members Friends and worldwide.</h2>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
               Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
               Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a
               Lorem Ipsum passage</p>
-            <button>Use it for free</button>
+            <button class="wow fadeInDown">Use it for free</button>
           </div>
         </div>
 
-        <div class="col-lg-5">
+        <div class="col-lg-5 wow fadeInRight">
           <img src="assets/2nd sec_phone.png" alt="Video Calls image" />
         </div>
       </div>
@@ -173,19 +176,19 @@
   <!-- Video-call Section End -->
 
   <!-- App-features Section Start -->
-  <section class="app-features">
+  <section class="app-features wow">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
           <h2>Are you ready to enjoy NBook?</h2>
-          <div class="separator"></div>
+          <div class="separator wow pulse"></div>
           <p>We have created a awesome app that will help people get to now others and be conected with family, friends
             and antwhere of the world.</p>
         </div>
       </div>
 
       <div class="row align-items-center">
-        <div class="col-lg-4">
+        <div class="col-lg-4 wow fadeInLeft">
           <div class="features-item-left">
             <div class="icon">
               <i class="fa-solid fa-layer-group"></i>
@@ -227,11 +230,11 @@
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-lg-4  wow fadeInDown">
           <img src="assets/3rd sec_phone.png" alt="Apps Features" />
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-lg-4 wow fadeInRight">
           <div class="features-item-right">
             <div class="icon">
               <i class="fa-solid fa-arrows-turn-to-dots"></i>
@@ -275,13 +278,13 @@
   <!-- App-features Section End -->
 
   <!-- Download Section Start -->
-  <section class="download">
+  <section class="download wow">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
           <div class="content">
             <h2>Downloading NBook from here. Now!</h2>
-            <button>Download<i class="fa-solid fa-download"></i></button>
+            <button class="wow pulse">Download<i class="fa-solid fa-download"></i></button>
           </div>
         </div>
       </div>
@@ -290,22 +293,22 @@
   <!-- Download Section End -->
 
   <!-- Booking Section Start -->
-  <section class="booking">
+  <section class="booking wow">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6">
-          <img src="assets/monitor.png" class="img-fluid" alt="Video Calls image" />
+          <img src="assets/monitor.png" class="img-fluid wow fadeInLeft" alt="Video Calls image" />
         </div>
 
         <div class="col-lg-6">
-          <div class="content">
+          <div class="content wow fadeInRight">
             <h5><span>//</span>Browsing</h5>
             <h2>NBook will bring your web to comfortable life.</h2>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
               Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
               Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a
               Lorem Ipsum passage</p>
-            <button>Use it for free</button>
+            <button class=" wow fadeInDown">Use it for free</button>
           </div>
         </div>
       </div>
@@ -314,14 +317,14 @@
   <!-- Booking Section End -->
 
   <!-- Screenshots Section Start -->
-  <section class="screenshots">
+  <section class="screenshots wow">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
           <h2>Screenshots</h2>
 
           <!-- Carousel Start -->
-          <div class="owl-carousel owl-theme">
+          <div class="owl-carousel owl-theme wow fadeInUp">
             <div class="item">
               <img src="assets/carousel 1.png" alt="" />
             </div>
@@ -347,11 +350,11 @@
   <!-- Screenshots Section End -->
 
   <!-- Overview Section Start -->
-  <section class="overview">
+  <section class="overview wow">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-3">
-          <div class="content">
+          <div class="content  wow fadeInLeft">
             <div class="icon">
               <i class="fa-solid fa-user"></i>
             </div>
@@ -363,7 +366,7 @@
         </div>
 
         <div class="col-lg-3">
-          <div class="content">
+          <div class="content wow fadeInLeft">
             <div class="icon">
               <i class="fa-solid fa-graduation-cap"></i>
             </div>
@@ -375,7 +378,7 @@
         </div>
 
         <div class="col-lg-3">
-          <div class="content">
+          <div class="content wow fadeInRight">
             <div class="icon">
               <i class="fa-solid fa-pager"></i>
             </div>
@@ -387,7 +390,7 @@
         </div>
 
         <div class="col-lg-3">
-          <div class="content">
+          <div class="content wow fadeInRight">
             <div class="icon">
               <i class="fa-brands fa-twitter"></i>
             </div>
@@ -403,13 +406,13 @@
   <!-- Overview Section End -->
 
   <!-- News Section Start -->
-  <section class="news-section">
+  <section class="news-section wow">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
           <div class="heading">
             <h2>Recent news</h2>
-            <div class="separator-1"></div>
+            <div class="separator-1 wow pulse"></div>
             <p class="p">We have created a awesome app that will help people get to now others and be conected with
               family, friends and antwhere of the world.</p>
           </div>
@@ -417,7 +420,7 @@
           <div class="blog">
             <div class="row align-items-center">
               <div class="col-lg-4">
-                <div class="blogger">
+                <div class="blogger wow fadeInLeft">
                   <img src="assets/vloger profile img.png" alt="">
                   <h3>Hello I'm</h3>
                   <h4>NASIR UDDIN</h4>
@@ -428,7 +431,7 @@
                 </div>
               </div>
               <div class="col-lg-8">
-                <div class="blog-content">
+                <div class="blog-content  wow fadeInRight">
                   <h5>Here is the post title</h5>
                   <img src="assets/vlog img 1.png" class="img-fluid" alt="">
                   <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
@@ -455,20 +458,19 @@
           <div class="blog-2">
             <div class="row align-items-center">
               <div class="col-lg-4">
-                <div class="bottom-up">
+                <div class="bottom-up wow fadeInDown">
                   <img src="assets/vlog img 2.png" class="img-fluid" alt="">
                   <p>Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from
                     45 BC, making it over 2000 years old. RichClintock, a Latin professor. </p>
                   <a href="javascript:;">Read more</a>
                 </div>
-                <div class="bottom-down">
+                <div class="bottom-down wow fadeInUp">
                   <div class="themeforest">
                     <img src="assets/vlog img 3.png" alt="">
                     <p>https://www.themeforest.net/ <br> themegather</p>
                   </div>
                   <div class="content">
-                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                      classical Latin literature from 45 BC making it over 2000 years old. Richard McClintock, </p>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC making it over 2000 years old. Richard McClintock, </p>
                     <div class="blog-bottom">
                       <div class="read-more">
                         <a href="javascript:;"><span><i class="fa-solid fa-less-than"></i></span> READ MORE <span><i
@@ -485,7 +487,7 @@
               </div>
 
               <div class="col-lg-8">
-                <div class="blog-content">
+                <div class="blog-content wow fadeInRight">
                   <h5>Here is the post title</h5>
                   <div class="up-content-bg">
                     <div class="up-content">
@@ -533,14 +535,14 @@
       <div class="row">
         <div class="col-lg-12">
           <h2>Keep in touch with us</h2>
-          <div class="separator-1"></div>
+          <div class="separator-1 wow pulse"></div>
           <p class="p">We have created a awesome app that will help people get to now others and be conected with
             family, friends and antwhere of the world.</p>
           <div class="row">
             <div class="col-lg-6">
-              <div class="about-us">
+              <div class="about-us wow fadeInDown">
                 <div class="social-links">
-                  <div class="separator-2"></div>
+                  <div class="separator-2 wow pulse"></div>
                   <h3>SOCIALIZED WITH US</h3>
                   <ul>
                     <li>
@@ -580,8 +582,8 @@
             </div>
 
             <div class="col-lg-6">
-              <div class="form">
-                <div class="separator-2"></div>
+              <div class="form wow fadeInDown">
+                <div class="separator-2 wow pulse"></div>
                 <h3>SENT A MESSAGE</h3>
                 <form>
                   <div class="mb-3">
@@ -599,7 +601,7 @@
                       placeholder="Type your message..."></textarea>
                   </div>
                   <div class="mb-3">
-                    <input type="submit" class="btn-sent" value="SENT MESSAGE" />
+                    <input type="submit" class="btn-sent wow pulse" value="SENT MESSAGE" />
                   </div>
                 </form>
               </div>
@@ -613,13 +615,13 @@
 
   <!-- Footer Section Start -->
   <footer>
-    <div class="container">
+    <div class="container wow">
       <div class="row">
         <div class="col-lg-12">
           <div class="down-icon">
             <a href="javascript:;"><i class="fa-solid fa-angles-down"></i></a>
           </div>
-          <div class="footer-nbook">
+          <div class="footer-nbook wow fadeIn">
             <h1>NBOOK</h1>
           </div>
           <p>All Rights has been reserved</p>
@@ -641,6 +643,9 @@
 
   <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
   <script src="js/jquery.counterup.min.js"></script>
+
+  <!-- Wow js -->
+  <script type="text/javascript" src="js/wow.min.js"></script>
 
   <!-- Theme javascript file -->
   <script type="text/javascript" src="js/main.js"></script>
